# GST_ANV

./: .gitmodules  CMakeLists.txt  Draw.cpp  Draw.h  GstFaceDetectorOV.h  GstLandmarkDetectorOV.h  README.md  main.cpp
cmake/modules/: FindGStreamermm.cmake
